--- a/styles.css
+++ b/styles.css
@@ -309,7 +309,7 @@ button:hover{
       
       /* Styles for showing/hiding the sidebar */
       .sidebar-active {
-        right: 0; /* Slide the sidebar into view */
+        right: -250px; /* Slide the sidebar into view */
       }
       
       .content-active {
@@ -332,7 +332,7 @@ button:hover{
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        height: 500px;
+        
         width: 570px;
       }
 
@@ -340,11 +340,13 @@ button:hover{
         font-weight: 800;
         font-size: 50px;
         width: 7em;
+        margin-left: 100px;
       }
 
       .evolution-text{
         line-height: 1.6;
-        font-size: 20px;
+        font-size: 16px;
+        margin-left: 100px;
       }
 
       .button-container{
@@ -360,6 +362,7 @@ button:hover{
         border: none;
         color: #fff;
         transition-duration: 0.4s;
+        margin-left: 100px;
       }
 
       button:hover{
@@ -371,7 +374,7 @@ button:hover{
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        padding: 20px;
+        padding: 100px;
         gap: 70px;
         width: 100%;
         height: 80vh;
@@ -410,22 +413,26 @@ button:hover{
         display: flex;
         flex-direction: column;
         margin-top: 50px;
-        gap: 30px;
+        margin-left: 100px;
+        gap: 40px;
       }
 
       .gaming-description-one{
         display: flex;
         flex-direction: row;
+        gap: 15px;
       }
       
       .gaming-description-two{
         display: flex;
         flex-direction: row;
+        gap: 15px;
       }
 
       .gaming-description-three{
         display: flex;
         flex-direction: row;
+        gap: 15px;
       }
 
       .news-one{
